js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib1/l1b.0.kt
inline fun fun2() = "fun2"
